<resources>
    <string name="app_name">BusTAYU</string>
    <string name="title_route">경로</string>
    <string name="title_around">주변검색</string>
    <string name="title_reserved">예약</string>
    <string name="title_liked">즐겨찾기</string>
    <string name="title_setup">설정</string>
    <string name="title_search">검색</string>
    <string name="title_notification">알림</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="station_stationTitle">정류장 명 [정류장 번호]</string>
    <string name="station_backBtn">이전</string>
    <string name="station_floatingBtn">시간 새로고침</string>
    <string name="bus_floatingBtn">시간 새로고침</string>
    <string name="bus_BusName">버스명</string>
    <string name="bus_StationName">정류장 명 [정류장 번호]</string>
    <string name="around_floatingBtn">현 위치</string>
    <string name="around_title">사용자 현 위치</string>
    <string name="station_rserveBtn">예약</string>
    <string name="station_likeBtn">즐겨찾기</string>
    <string name="liked_floatingBtn">시간 새로고침</string>
    <string name="liked_btn">더보기</string>
    <string name="search_btn">더보기</string>
    <string name="reserved_floatingBtn">시간 새로고침</string>
    <string name="reserved_btn">예약취소</string>
    <string name="search_stationWay">방면</string>
    <string name="search_stationNumber">[정류장 번호]</string>
    <string name="search_stationName">정류장 명</string>
    <string name="station_moreBtn">상세보기</string>
    <string name="bus_data1Btn">첫 번째 버스 예약</string>
    <string name="bus_data2Btn">두 번째 버스 예약</string>
    <string name="liked_Btn">상세보기</string>
    <string name="bus_likeBtn">즐겨찾기 해제</string>
    <string name="loading">잠시 기다려 주세요</string>
</resources>