<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BusActivity">

    <!-- Floating Action Button : 시간 새로고침 -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bus_floatingbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/bus_floatingBtn"
        app:backgroundTint="#D8D8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_autorenew_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:padding="10sp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/bus_BusName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bus_BusName"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bus_StationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/bus_StationName"
            android:textAlignment="center"
            android:textSize="18sp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/bus_SwipeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            tools:context=".activity.BusActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bus_data1"
                    android:orientation="vertical"
                    android:layout_marginStart="8sp"
                    android:layout_marginEnd="8sp">

                    <Button
                        android:id="@+id/bus_data1Btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="15dp"
                        android:minHeight="15dp"
                        android:text="@string/bus_data1Btn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bus_data1TV"
                        android:text="임시데이터1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bus_data2"
                    android:layout_below="@+id/bus_data1"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_marginStart="8sp"
                    android:layout_marginEnd="8sp">

                    <Button
                        android:id="@+id/bus_data2Btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="15dp"
                        android:minHeight="15dp"
                        android:text="@string/bus_data2Btn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bus_data2TV"
                        android:text="임시데이터2" />
                </LinearLayout>

            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>