<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_station"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/border_inside"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--노선명-->
        <TextView
            android:id="@+id/station_rtNm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="rtNm 노선명" />

        <!--BusActivity-->
        <Button
            android:id="@+id/station_moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minWidth="15dp"
            android:minHeight="15dp"
            android:text="@string/station_moreBtn" />
    </LinearLayout>

    <!--버스 방면-->
    <TextView
        android:id="@+id/station_adirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        tools:text="arirection" />

    <!-- 정류소 이름(한글) Alertdialog에 recyclerView에 넣고, StationHolder에서 숨김처리 : 화면에 나오지 않음-->
    <TextView
        android:id="@+id/station_stationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="stationName" />

    <!--정류소 번호 디비에 넣기 위해 recyclerView에 넣고, StationHolder에서 숨김처리 : 화면에 나오지 않음-->
    <TextView
        android:id="@+id/station_stationNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="stationNum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/station_likeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:minWidth="10dp"
            android:text="@string/station_likeBtn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 첫번째 버스 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--첫번째 도착 예정 버스 정보-->
                <TextView
                    android:id="@+id/station_arrmsgSec1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="arrmsgSec1" />

                <Button
                    android:id="@+id/station_arrmsgSec1Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minWidth="15dp"
                    android:minHeight="15dp"
                    android:text="@string/station_rserveBtn" />
            </LinearLayout>

            <!-- 두번째 버스 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--두번째 도착 예정 버스 정보-->
                <TextView
                    android:id="@+id/station_arrmsgSec2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="arrmsgSec2" />

                <Button
                    android:id="@+id/station_arrmsgSec2Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minWidth="15dp"
                    android:minHeight="15dp"
                    android:text="@string/station_rserveBtn" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>